--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
   <meta charset="utf-8">
   <title>Venus</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
   <section class="section">
-    <div>
+    <div class="wrapper pad-t-2 pad-b-2">
 
-      <figure class="photo">
+      <figure class="photo gutter-1-2">
         <img class="img-flex" src="images/venus.jpg" alt="">
-        <figcaption>A real-colour image of Venus.</figcaption>
+        <figcaption class="micro itelic">A real-colour image of Venus.</figcaption>
       </figure>
 
       <div class="info">
-        <h1>Venus</h1>
-        <p>Venus, the second planet in the Solar System.</p>
+        <h1 class="zetta">Venus</h1>
+        <p class="kilo italic">Venus, the second planet in the Solar System.</p>
         <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
         <div class="details">
