--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
       <figure class="photo gutter-1-2">
         <img class="img-flex" src="images/venus.jpg" alt="">
-        <figcaption class="micro italic">A real-colour image of Venus.</figcaption>
+        <figcaption class="micro italic text-center">A real-colour image of Venus.</figcaption>
       </figure>
 
       <div class="info">
-        <h1 class="zetta">Venus</h1>
+        <h1 class="zetta push-0">Venus</h1>
         <p class="kilo italic">Venus, the second planet in the Solar System.</p>
         <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
@@ -26,13 +26,13 @@
           <h2 class="tera">Physical characteristics</h2>
           <dl>
             <dt>Mean radius</dt>
-            <dd class="giga"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
+            <dd class="giga push-0"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
             <dt>Mass</dt>
-            <dd class="giga"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
+            <dd class="giga push-0"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
             <dt>Surface gravity</dt>
-            <dd class="giga"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
+            <dd class="giga push-0"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
             <dt>Axial tilt</dt>
-            <dd class="giga"><data value="177.36">177.36°</data></dd>
+            <dd class="giga push-0"><data value="177.36">177.36°</data></dd>
           </dl>
         </div>
 
@@ -40,13 +40,13 @@
           <h2 class="tera">Orbital Characteristics</h2>
           <dl>
             <dt>Aphelion</dt>
-            <dd class="giga"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
+            <dd class="giga push-0"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
             <dt>Perihelion</dt>
-            <dd class="giga"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
+            <dd class="giga push-0"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
             <dt>Orbital period</dt>
-            <dd class="giga"><data value="224.701">224.701&nbsp;d</data></dd>
+            <dd class="giga push-0"><data value="224.701">224.701&nbsp;d</data></dd>
             <dt>Average orbital speed</dt>
-            <dd class="giga"><data value="35.02">35.02&nbsp;km/s</data></dd>
+            <dd class="giga push-0"><data value="35.02">35.02&nbsp;km/s</data></dd>
           </dl>
         </div>
       </div>
