--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       </figure>
 
       <div class="info">
-        <h1 class="zetta push-0">Venus</h1>
-        <p class="kilo italic">Venus, the second planet in the Solar System.</p>
-        <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
+        <h1 class="exa push-0">Venus</h1>
+        <p class="mega italic push-1">Venus, the second planet in the Solar System.</p>
+        <p class="push-0.5">Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
         <div class="details">
-          <h2 class="tera">Physical characteristics</h2>
+          <h2 class="giga">Physical characteristics</h2>
           <dl>
             <dt>Mean radius</dt>
-            <dd class="giga push-0"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
+            <dd class="giga push-.05"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
             <dt>Mass</dt>
             <dd class="giga push-0"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
             <dt>Surface gravity</dt>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="details">
-          <h2 class="tera">Orbital Characteristics</h2>
+          <h2 class="giga">Orbital Characteristics</h2>
           <dl>
             <dt>Aphelion</dt>
             <dd class="giga push-0"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
