--- a/index.html
+++ b/index.html
@@ -9,44 +9,44 @@
 </head>
 <body>
 
-  <section class="section">
-    <div class="wrapper pad-t-2 pad-b-2">
+  <section class="section pad-t-2 pad-b">
+    <div class="wrapper">
 
-      <figure class="photo gutter-1-2">
+      <figure class="photo gutter-1-4">
         <img class="img-flex" src="images/venus.jpg" alt="">
-        <figcaption class="micro italic text-center">A real-colour image of Venus.</figcaption>
+        <figcaption class="milli italic text-center">A real-colour image of Venus.</figcaption>
       </figure>
 
-      <div class="info">
-        <h1 class="exa push-0">Venus</h1>
-        <p class="mega italic push-1">Venus, the second planet in the Solar System.</p>
-        <p class="push-0.5">Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
+      <div class="info gutter-1-4">
+        <h1 class="peta push-0">Venus</h1>
+        <p class="mega italic">Venus, the second planet in the Solar System.</p>
+        <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
         <div class="details">
-          <h2 class="giga">Physical characteristics</h2>
+          <h2 class="mega">Physical characteristics</h2>
           <dl>
-            <dt>Mean radius</dt>
-            <dd class="giga push-.05"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
-            <dt>Mass</dt>
-            <dd class="giga push-0"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
-            <dt>Surface gravity</dt>
-            <dd class="giga push-0"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
-            <dt>Axial tilt</dt>
-            <dd class="giga push-0"><data value="177.36">177.36°</data></dd>
+            <dt class="milli">Mean radius</dt>
+            <dd class="mega push-0"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
+            <dt class="milli">Mass</dt>
+            <dd class="mega push-0"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
+            <dt class="milli">Surface gravity</dt>
+            <dd class="mega push-0"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
+            <dt class="milli">Axial tilt</dt>
+            <dd class="mega push-0"><data value="177.36">177.36°</data></dd>
           </dl>
         </div>
 
         <div class="details">
-          <h2 class="giga">Orbital Characteristics</h2>
+          <h2 class="mega">Orbital Characteristics</h2>
           <dl>
-            <dt>Aphelion</dt>
-            <dd class="giga push-0"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
-            <dt>Perihelion</dt>
-            <dd class="giga push-0"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
-            <dt>Orbital period</dt>
-            <dd class="giga push-0"><data value="224.701">224.701&nbsp;d</data></dd>
-            <dt>Average orbital speed</dt>
-            <dd class="giga push-0"><data value="35.02">35.02&nbsp;km/s</data></dd>
+            <dt class="milli">Aphelion</dt>
+            <dd class="mega push-0"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
+            <dt class="milli">Perihelion</dt>
+            <dd class="mega push-0"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
+            <dt class="milli">Orbital period</dt>
+            <dd class="mega push-0"><data value="224.701">224.701&nbsp;d</data></dd>
+            <dt class="milli">Average orbital speed</dt>
+            <dd class="mega push-0"><data value="35.02">35.02&nbsp;km/s</data></dd>
           </dl>
         </div>
       </div>
